--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathongo-sample-frontend-assignment-hriday",
+  "name": "jee-main-pyqs-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
